static img typo

--- a/_posts/python/static-image/static-image-export.ipynb
+++ b/_posts/python/static-image/static-image-export.ipynb
@@ -14,8 +14,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Save the image:\n",
-    "To save the image, you need to login to plotly using [your credentials](https://plot.ly/settings/api) (username and API Key)."
+    "#### Save the Image\n",
+    "To save the image, you need to login to plotly using [your credentials](https://plot.ly/settings/api) (username and API Key). In this example, the image is saved as a png."
    ]
   },
   {
@@ -28,6 +28,7 @@
    "source": [
     "import plotly.plotly as py\n",
     "import plotly.graph_objs as go\n",
+    "\n",
     "# Sign in to plotly\n",
     "py.sign_in('DemoAccount', '1gf0wk3') # Replace the username, and API key with your credentials.\n",
     "\n",
@@ -35,30 +36,14 @@
     "trace = go.Bar(x=[2, 4, 6], y= [10, 12, 15])\n",
     "data = [trace]\n",
     "layout = go.Layout(title='A Simple Plot', width=800, height=640)\n",
-    "fig = go.Figure(data=data, layout=layout)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To save the image as a PNG:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "fig = go.Figure(data=data, layout=layout)\n",
+    "\n",
     "py.image.save_as(fig, filename='a-simple-plot.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -70,7 +55,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,8 +69,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Embedding static image in IPython notebook:\n",
-    "You can also directly render the image inside the IPython notebook using the utility function `ishow`. It is similar to Matplotlib's `imshow` method:\n"
+    "#### Embed Static Image in IPython Notebook\n",
+    "You can also directly render the image inside the IPython notebook using the utility function `ishow`. It is similar to Matplotlib's `imshow` method:"
    ]
   },
   {
@@ -114,25 +99,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Retrieving an Image from an existing chart\n",
+    "#### Retrieve an Image from an Existing Chart\n",
     "To export an image of a chart you (or someone else) have already created, first you can retreive it using `get_figure` method, and then save it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "fig = py.get_figure('chris', '1638')\n",
-    "py.image.save_as(fig,'chris-plot.png')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -144,12 +117,15 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "fig = py.get_figure('chris', '1638')\n",
+    "py.image.save_as(fig,'chris-plot.png')\n",
+    "\n",
     "Image('chris-plot.png') # Display a static image"
    ]
   },
@@ -157,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Supported Formats:\n",
+    "#### Supported Formats\n",
     "\n",
     "The common image formats: 'PNG', 'JPG/JPEG' are supported. In addition, formats like 'EPS', 'SVG' and 'PDF' are also supported.\n",
     "\n",
@@ -174,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Saving Image data in Memory:\n",
+    "#### Saving Image Data in Memory\n",
     "\n",
     "The data from the charts can also be stored in the memory. This reduces the overhead of saving the image in the hard disk. It is particularly useful when the image needs to be embedded (for example in email reports)."
    ]
@@ -298,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -332,7 +308,7 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://github.com/plotly/publisher.git\n",
-      "  Cloning https://github.com/plotly/publisher.git to /var/folders/72/g6h98xwx0h1gp4kc8rzhsdh80000gn/T/pip-lbBR7c-build\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/72/g6h98xwx0h1gp4kc8rzhsdh80000gn/T/pip-5K0dh0-build\n",
       "Installing collected packages: publisher\n",
       "  Found existing installation: publisher 0.10\n",
       "    Uninstalling publisher-0.10:\n",
@@ -341,6 +317,20 @@
       "\u001b[?25hSuccessfully installed publisher-0.10\n",
       "\u001b[33mYou are using pip version 8.0.3, however version 8.1.2 is available.\n",
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning:\n",
+      "\n",
+      "The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
+      "\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
+      "\n",
+      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "\n"
      ]
     }
    ],
