--- a/_posts/python/3d-surface-coloring/3d_surface_coloring.ipynb
+++ b/_posts/python/3d-surface-coloring/3d_surface_coloring.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -203,38 +203,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting git+https://github.com/plotly/publisher.git\n",
-      "  Cloning https://github.com/plotly/publisher.git to /var/folders/j3/gt_q6y096cjfts4q8zq2dm2c0000gn/T/pip-IPbQMX-build\n",
-      "Installing collected packages: publisher\n",
-      "  Found existing installation: publisher 0.10\n",
-      "    Uninstalling publisher-0.10:\n",
-      "      Successfully uninstalled publisher-0.10\n",
-      "  Running setup.py install for publisher\n",
-      "Successfully installed publisher-0.10\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning:\n",
-      "\n",
-      "The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
-      "\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:58: UserWarning:\n",
-      "\n",
-      "Your URL has more than 2 parts... are you sure?\n",
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -243,16 +211,14 @@
     "display(HTML('<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />'))\n",
     "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
     "\n",
-    "! pip install git+https://github.com/plotly/publisher.git --upgrade\n",
-    "    \n",
     "import publisher\n",
     "publisher.publish(\n",
     "    '3d_surface_coloring.ipynb', 'python/3d-surface-coloring//', '3D Python Surface Coloring | plotly',\n",
     "    'How to Color 3D Surface Plots in Python with Plotly.',\n",
     "    title = '3D Surface Coloring in Python | plotly',\n",
     "    name = '3D Surface Coloring',\n",
-    "    has_thumbnail='true', thumbnail='thumbnail/3d-scatter.jpg', \n",
-    "    language='python', page_type='example_index', \n",
+    "    has_thumbnail='true', thumbnail='thumbnail/3d-surface-color.jpg', \n",
+    "    language='python', page_type='example_index',\n",
     "    display_as='3d_charts', order=12)"
    ]
   },
