update error bar docs

--- a/_posts/python/table/table.ipynb
+++ b/_posts/python/table/table.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "source": [
     "#### Version Check\n",
-    "Note: tables are available in version <b>1.9.2+</b><br>\n",
+    "Note: Tables are available in version <b>1.9.2+</b><br>\n",
     "Run  `pip install plotly --upgrade` to update your Plotly version"
    ]
   },
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -676,7 +676,7 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://github.com/plotly/publisher.git\n",
-      "  Cloning https://github.com/plotly/publisher.git to /var/folders/72/g6h98xwx0h1gp4kc8rzhsdh80000gn/T/pip-m1Wxfa-build\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/72/g6h98xwx0h1gp4kc8rzhsdh80000gn/T/pip-8IBqwD-build\n",
       "Installing collected packages: publisher\n",
       "  Found existing installation: publisher 0.10\n",
       "    Uninstalling publisher-0.10:\n",
@@ -691,14 +691,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning:\n",
-      "\n",
-      "The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
-      "\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n"
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning: The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
+      "  \"You should import from nbconvert instead.\", ShimWarning)\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
      ]
     }
    ],
@@ -712,7 +708,7 @@
     "import publisher\n",
     "publisher.publish(\n",
     "    'table.ipynb', 'python/table/', 'Python Tables | plotly',\n",
-    "    'How to make Tables in Python with Plotly.',\n",
+    "    'How to make tables in Python with Plotly.',\n",
     "    title = 'Tables | plotly',\n",
     "    name = 'Tables',\n",
     "    thumbnail='thumbnail/table.jpg', language='python',\n",
