--- a/_posts/python/distplot/distplots.ipynb
+++ b/_posts/python/distplot/distplots.ipynb
@@ -4,12 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Distplots in Python"
+    "#### New to Plotly?\n",
+    "Plotly's Python library is free and open source! [Get started](https://plot.ly/python/getting-started/) by dowloading the client and [reading the primer](https://plot.ly/python/getting-started/).\n",
+    "<br>You can set up Plotly to work in [online](https://plot.ly/python/getting-started/#initialization-for-online-plotting) or [offline](https://plot.ly/python/getting-started/#initialization-for-offline-plotting) mode, or in [jupyter notebooks](https://plot.ly/python/getting-started/#start-plotting-online).\n",
+    "<br>We also have a quick-reference [cheatsheet](https://images.plot.ly/plotly-documentation/images/python_cheat_sheet.pdf) (new!) to help you get started!# Distplots in Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "#### Version Check\n",
+    "Note: Distplots are available in version <b>1.11.0+</b><br>\n",
+    "Run  `pip install plotly --upgrade` to update your Plotly version"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -17,10 +31,10 @@
     {
      "data": {
       "text/plain": [
-       "'1.10.0'"
+       "'1.11.0'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,12 +48,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Simple Distplot Example"
+    "#### Simple Distplot "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -47,13 +61,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kevintest/779.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9395.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,12 +90,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Plot Multiple Datasets"
+    "#### Plot Multiple Datasets and Customize Bin Size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -89,13 +103,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kevintest/17.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11595.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,12 +142,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Customizations: Rug Text, Colors & Title"
+    "#### Use Multiple Bin Sizes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -141,13 +155,65 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kevintest/857.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11595.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import plotly.plotly as py\n",
+    "from plotly.tools import FigureFactory as FF\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "# Add histogram data\n",
+    "x1 = np.random.randn(200)-2  \n",
+    "x2 = np.random.randn(200)  \n",
+    "x3 = np.random.randn(200)+2  \n",
+    "x4 = np.random.randn(200)+4  \n",
+    "\n",
+    "# Group data together\n",
+    "hist_data = [x1, x2, x3, x4]\n",
+    "\n",
+    "group_labels = ['Group 1', 'Group 2', 'Group 3', 'Group 4']\n",
+    "\n",
+    "# Create distplot with custom bin_size\n",
+    "fig = FF.create_distplot(hist_data, group_labels, bin_size=[.1, .25, .5, 1])\n",
+    "\n",
+    "# Plot!\n",
+    "py.iplot(fig, filename='Distplot with Multiple Bin Sizes', validate=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Customize Rug Text, Colors & Title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11882.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -209,13 +275,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kevintest/21.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11884.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,10 +298,10 @@
     "\n",
     "group_labels = ['Group 1', 'Group 2']\n",
     "\n",
-    "colors = ['rgb(0, 0, 100)', 'rgb(300, 200, 200)']\n",
+    "colors = ['#3A4750', '#F64E8B']\n",
     "\n",
     "# Create distplot with curve_type set to 'normal'\n",
-    "fig = FF.create_distplot(hist_data, group_labels, bin_size=.5, curve_type='normal', colors=['rgb(0, 0, 100)', 'rgb(0, 200, 200)'])\n",
+    "fig = FF.create_distplot(hist_data, group_labels, bin_size=.5, curve_type='normal', colors=colors)\n",
     "\n",
     "# Add title\n",
     "fig['layout'].update(title='Distplot with Normal Distribution')\n",
@@ -255,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -263,13 +329,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kevintest/859.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11886.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,9 +353,10 @@
     "hist_data = [x1, x2, x3]\n",
     "\n",
     "group_labels = ['Group 1', 'Group 2', 'Group 3']\n",
+    "colors = ['#333F44', '#37AA9C', '#94F3E4']\n",
     "\n",
     "# Create distplot with curve_type set to 'normal'\n",
-    "fig = FF.create_distplot(hist_data, group_labels, show_hist=False)\n",
+    "fig = FF.create_distplot(hist_data, group_labels, show_hist=False, colors=colors)\n",
     "\n",
     "# Add title\n",
     "fig['layout'].update(title='Curve and Rug Plot')\n",
@@ -307,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -315,13 +382,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kevintest/861.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11888.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,9 +406,10 @@
     "hist_data = [x1, x2, x3]\n",
     "\n",
     "group_labels = ['Group 1', 'Group 2', 'Group 3']\n",
+    "colors = ['#835AF1', '#7FA6EE', '#B8F7D4']\n",
     "\n",
     "# Create distplot with curve_type set to 'normal'\n",
-    "fig = FF.create_distplot(hist_data, group_labels, bin_size=.25, show_curve=False)\n",
+    "fig = FF.create_distplot(hist_data, group_labels, colors=colors, bin_size=.25, show_curve=False)\n",
     "\n",
     "# Add title\n",
     "fig['layout'].update(title='Hist and Rug Plot')\n",
@@ -359,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -367,13 +435,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kevintest/870.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11890.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,16 +452,17 @@
     "\n",
     "import numpy as np\n",
     "\n",
-    "x1 = np.random.randn(200) - 1 \n",
+    "x1 = np.random.randn(200) - 2 \n",
     "x2 = np.random.randn(200)\n",
-    "x3 = np.random.randn(200) + 1 \n",
+    "x3 = np.random.randn(200) + 2 \n",
     "\n",
     "hist_data = [x1, x2, x3]\n",
     "\n",
     "group_labels = ['Group 1', 'Group 2', 'Group 3']\n",
-    "\n",
+    "colors = ['#393E46', '#2BCDC1', '#F66095']\n",
     "# Create distplot with curve_type set to 'normal'\n",
-    "fig = FF.create_distplot(hist_data, group_labels, bin_size=[0.3, 0.2, 0.1], show_curve=False)\n",
+    "fig = FF.create_distplot(hist_data, group_labels, colors=colors, \n",
+    "                         bin_size=[0.3, 0.2, 0.1], show_curve=False)\n",
     "\n",
     "# Add title\n",
     "fig['layout'].update(title='Hist and Rug Plot')\n",
@@ -411,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -419,13 +488,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kevintest/863.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11892.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,16 +505,18 @@
     "\n",
     "import numpy as np\n",
     "\n",
-    "x1 = np.random.randn(200) - 1 \n",
+    "x1 = np.random.randn(200) - 2 \n",
     "x2 = np.random.randn(200)\n",
-    "x3 = np.random.randn(200) + 1 \n",
+    "x3 = np.random.randn(200) + 2 \n",
     "\n",
     "hist_data = [x1, x2, x3]\n",
     "\n",
     "group_labels = ['Group 1', 'Group 2', 'Group 3']\n",
+    "colors = ['#A56CC1', '#A6ACEC', '#63F5EF']\n",
     "\n",
     "# Create distplot with curve_type set to 'normal'\n",
-    "fig = FF.create_distplot(hist_data, group_labels, bin_size=.2, show_rug=False)\n",
+    "fig = FF.create_distplot(hist_data, group_labels, colors=colors,\n",
+    "                         bin_size=.2, show_rug=False)\n",
     "\n",
     "# Add title\n",
     "fig['layout'].update(title='Hist and Curve Plot')\n",
@@ -458,12 +529,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####Distplot with Pandas"
+    "#### Distplot with Pandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -471,13 +542,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kevintest/866.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/8309.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,12 +570,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reference "
+    "#### Reference "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -515,7 +586,7 @@
      "text": [
       "Help on function create_distplot in module plotly.tools:\n",
       "\n",
-      "create_distplot(hist_data, group_labels, bin_size=1.0, curve_type='kde', colors=[], rug_text=[], show_hist=True, show_curve=True, show_rug=True)\n",
+      "create_distplot(hist_data, group_labels, bin_size=1.0, curve_type='kde', colors=[], rug_text=[], histnorm='probability density', show_hist=True, show_curve=True, show_rug=True)\n",
       "    BETA function that creates a distplot similar to seaborn.distplot\n",
       "    \n",
       "    The distplot can be composed of all or any combination of the following\n",
@@ -529,6 +600,8 @@
       "    :param (list[float]|float) bin_size: Size of histogram bins.\n",
       "        Default = 1.\n",
       "    :param (str) curve_type: 'kde' or 'normal'. Default = 'kde'\n",
+      "    :param (str) histnorm: 'probability density' or 'probability'\n",
+      "        Default = 'probability density'\n",
       "    :param (bool) show_hist: Add histogram to distplot? Default = True\n",
       "    :param (bool) show_curve: Add curve to distplot? Default = True\n",
       "    :param (bool) show_rug: Add rug to distplot? Default = True\n",
@@ -637,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -670,25 +743,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning:\n",
-      "\n",
-      "The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
-      "\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:58: UserWarning:\n",
-      "\n",
-      "Your URL has more than 2 parts... are you sure?\n",
-      "\n"
+      "Collecting git+https://github.com/plotly/publisher.git\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/72/g6h98xwx0h1gp4kc8rzhsdh80000gn/T/pip-VEv2Yw-build\n",
+      "Installing collected packages: publisher\n",
+      "  Found existing installation: publisher 0.10\n",
+      "    Uninstalling publisher-0.10:\n",
+      "      Successfully uninstalled publisher-0.10\n",
+      "  Running setup.py install for publisher ... \u001b[?25l-\b \bdone\n",
+      "\u001b[?25hSuccessfully installed publisher-0.10\n",
+      "\u001b[33mYou are using pip version 8.0.3, however version 8.1.2 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
      ]
     }
    ],
@@ -698,12 +762,12 @@
     "display(HTML('<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />'))\n",
     "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
     "\n",
-    "! pip install publisher --upgrade\n",
+    "! pip install git+https://github.com/plotly/publisher.git --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'distplots.ipynb', 'python/distplot//', 'Python Distplots | plotly',\n",
-    "    'How to make interactive Distplots in Python with Plotly. '\n",
-    "    'Eight examples of Distplots with Python and Plotly.',\n",
+    "    'distplots.ipynb', 'python/distplot/', 'Python Distplots | plotly',\n",
+    "    'How to make interactive Distplots in Python with Plotly. ',\n",
+    "    title = 'Python Distplots | plotly',\n",
     "    name = 'Distplots',\n",
     "    has_thumbnail='true', thumbnail='thumbnail/distplot.jpg', \n",
     "    language='python', page_type='example_index', \n",
@@ -736,7 +800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
