--- a/_posts/python/pie/pie-charts.ipynb
+++ b/_posts/python/pie/pie-charts.ipynb
@@ -30,7 +30,7 @@
     {
      "data": {
       "text/plain": [
-       "'1.9.12'"
+       "'1.11.0'"
       ]
      },
      "execution_count": 1,
@@ -40,8 +40,7 @@
    ],
    "source": [
     "import plotly\n",
-    "plotly.__version__\n",
-    "\n"
+    "plotly.__version__"
    ]
   },
   {
@@ -61,7 +60,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~Diksha_Gabha/239.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11908.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
@@ -103,7 +102,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~Diksha_Gabha/241.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11910.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
@@ -143,7 +142,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~Diksha_Gabha/243.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11912.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
@@ -241,7 +240,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~Diksha_Gabha/245.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11914.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
@@ -331,13 +330,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reference\n",
-    "See https://plot.ly/python/reference/##pie for more information and chart attribute options!"
+    "#### Reference\n",
+    "See https://plot.ly/python/reference/#pie for more information and chart attribute options!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -365,6 +364,22 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting git+https://github.com/plotly/publisher.git\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/72/g6h98xwx0h1gp4kc8rzhsdh80000gn/T/pip-Ob3SwW-build\n",
+      "Installing collected packages: publisher\n",
+      "  Found existing installation: publisher 0.10\n",
+      "    Uninstalling publisher-0.10:\n",
+      "      Successfully uninstalled publisher-0.10\n",
+      "  Running setup.py install for publisher ... \u001b[?25l-\b \bdone\n",
+      "\u001b[?25hSuccessfully installed publisher-0.10\n",
+      "\u001b[33mYou are using pip version 8.0.3, however version 8.1.2 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
     }
    ],
    "source": [
@@ -372,7 +387,8 @@
     "\n",
     "display(HTML('<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />'))\n",
     "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
-    "    \n",
+    "\n",
+    "! pip install git+https://github.com/plotly/publisher.git --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
     "    'pie-charts.ipynb', 'python/pie/', 'Python Pie Charts | plotly',\n",
@@ -381,7 +397,7 @@
     "    name = 'Pie Charts',\n",
     "    has_thumbnail='true', thumbnail='thumbnail/pie-chart.jpg', \n",
     "    language='python', page_type='example_index', \n",
-    "    display_as='basic', order=4)"
+    "    display_as='basic', order=6)"
    ]
   },
   {
@@ -410,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
