added Lines in  Shapes

--- a/_posts/r/2015-11-19-shapes.Rmd
+++ b/_posts/r/2015-11-19-shapes.Rmd
@@ -23,6 +23,44 @@ Sys.setenv("plotly_api_key"="q0lz6r5efr")
 
 ### Rectangles
 ```{r, results='hide'}
+s <-c();t<-c()
+for (i in 0:15)
+  {s[i] <- i
+  t[i] <- cos(i)}
+p <-plot_ly(x=s,y=t)
+
+# add shapes to the layout
+p <- layout(p, title = 'Highlighting with Lines',
+             shapes = list(
+               list(type = "line",
+                    line = list(color = "pink"), 
+                    x0 =0, x1 = 2, xref = "x",
+                    y0 = 0.5403023, y1 = 0.5403023, yref = "y"),
+                list(type = "line",
+                 line = list(color = "pink"), 
+                  x0 = 3, x1 = 5, xref = "x",
+                  y0 = -0.6536436, y1 = -0.6536436, yref = "y"),
+               list(type = "line",
+                    line = list(color = "pink"),
+                    x0 = 7, x1 = 9, xref = "x",
+                    y0 = -0.1455, y1 = -0.1455, yref = "y"),
+               list(type = "line",
+                    line = list(color = "pink"),
+                    x0 = 13, x1 = 15, xref = "x",
+                    y0 = 0.1367372, y1 = 0.1367372, yref = "y"),
+               list(type = "line",
+                    line = list(color = "pink"),
+                    x0 = 5, x1 = 7, xref = "x",
+                    y0 = 0.9601703, y1 = 0.9601703, yref = "y")
+               ))
+p
+```
+```{r, results='asis', echo=FALSE, message=FALSE}
+plotly_POST(p, filename="shapes/unemployment")
+```
+
+### Rectangles
+```{r, results='hide'}
 library(plotly)
 p <- plot_ly(economics, x = date, y = uempmed, name = "unemployment")
 
