--- a/_posts/r/2015-11-19-shapes.md
+++ b/_posts/r/2015-11-19-shapes.md
@@ -17,6 +17,43 @@ order: 11
 
 ##### Check out our <b>[reference page](https://plot.ly/r/reference/#layout-shapes)</b> for more information on using shapes!
 
+### Lines
+```r
+library(plotly)
+s <-c();t<-c()
+for (i in 0:15)
+  {s[i] <- i
+  t[i] <- cos(i)}
+p <-plot_ly(x=s,y=t)
+
+# add shapes to the layout
+p <- layout(p, title = 'Highlighting with Lines',
+             shapes = list(
+               list(type = "line",
+                    line = list(color = "pink"), 
+                    x0 =0, x1 = 2, xref = "x",
+                    y0 = 0.5403023, y1 = 0.5403023, yref = "y"),
+                list(type = "line",
+                 line = list(color = "pink"), 
+                  x0 = 3, x1 = 5, xref = "x",
+                  y0 = -0.6536436, y1 = -0.6536436, yref = "y"),
+               list(type = "line",
+                    line = list(color = "pink"),
+                    x0 = 7, x1 = 9, xref = "x",
+                    y0 = -0.1455, y1 = -0.1455, yref = "y"),
+               list(type = "line",
+                    line = list(color = "pink"),
+                    x0 = 13, x1 = 15, xref = "x",
+                    y0 = 0.1367372, y1 = 0.1367372, yref = "y"),
+               list(type = "line",
+                    line = list(color = "pink"),
+                    x0 = 5, x1 = 7, xref = "x",
+                    y0 = 0.9601703, y1 = 0.9601703, yref = "y")
+               ))
+p
+```
+<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~Diksha_Gabha/255/highlighting-with-lines/.embed" width="800" frameBorder="0"></iframe>
+
 ### Rectangles
 
 ```r
